--- a/src/app/addressBook/less/addressBook.less
+++ b/src/app/addressBook/less/addressBook.less
@@ -250,6 +250,17 @@
 						height:38px;
 						padding-left:20px;
 					}
+					a{	
+							width:15px;
+							position:absolute;
+							right:10px;
+							top:13px;
+						svg{
+							width:15px;
+							right:10px;
+							top:13px;
+						}
+					}
 					i{
 						left: 15px;
 						color: @primary-color;
