--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -4011,3 +4011,44 @@ input.error, .errorCity {
 		}
 	}
 }
+#pdpCarouselView {
+	.buildOrder-pdp-content {
+		margin: 0;
+		padding: 35px;
+		.pdp-right {
+			h3 {
+				font-size: 14px;
+			    .helvetica-bold;
+			    color: #54565d;
+			    margin: 10px 0;
+			    span{
+					.helvetica-medium !important;
+					margin-left: 7px;
+					display: inline-block;
+					text-transform:lowercase;
+					&:first-letter{
+						text-transform:uppercase;
+					}
+				}
+			}
+			.price {
+				h3 {
+					font-size: 16px;
+				}
+			}
+		}
+		.pdp-description {
+			padding-left: 10px;
+			margin-top: 15px;
+			.pdp-desc-title {
+				.helvetica-bold;
+				font-size: 14px;
+				color: #8c58b5;
+			}
+			.pdp-desc-cont {
+				.helvetica-regular;
+				font-size: 14px;
+			}
+		}
+	}
+}
