--- a/src/app/home/less/home.less
+++ b/src/app/home/less/home.less
@@ -1579,7 +1579,9 @@ be a descendant of the grid when it is being dragged.
 		background-color: #f7f7f7;
 	}
 }
-
+.quickViewModal .modal-dialog{
+	width: 95% !important;
+}
 
 /*.calendarModal{
  .modal-dialog{
