--- a/src/app/checkout/templates/checkout.tpl.html
+++ b/src/app/checkout/templates/checkout.tpl.html
@@ -96,7 +96,7 @@
 									<input type="text" ng-model="line.ShippingAddress.Street2" ng-readonly="line.xp.addressType=='InStorePickUp' ? true : false"></input>
 									<h6 style="color:red;" ng-if="checkout.lineItemForm[line.ID].invalidAddress && line.ShippingAddress.Street1 && line.ShippingAddress.Zip">Invalid Address/Zip</h6>
 									<div class="check-top city-block">
-										<p>City <span class="star">*</span></p>
+										<p>City <span class="star">*</span><span ng-if="line.ShippingAddress.City == 'Select City' ? checkout.lineItemForm[line.ID].$valid = false : ''"></span></p>
 										<input type="text" name="city" ng-if="line.MultipleCities.length <= 1 || !line.MultipleCities" ng-model="line.ShippingAddress.City" ng-readonly="line.xp.addressType=='InStorePickUp' ? true : false" required ng-class="{error: checkout.lineItemForm[line.ID].$submitted && checkout.lineItemForm[line.ID].city.$invalid}"></input>
 										<div ng-if="line.MultipleCities.length > 1" class="multiple-cities">
 											<div uib-dropdown class="form-control " id="MultipleCities" ng-class="{errorMMyy: checkout.lineItemForm[line.ID].$submitted && line.ShippingAddress.City == 'Select City'}">
@@ -104,7 +104,7 @@
 													<p class="sort-active-show" ng-init="line.ShippingAddress.City = 'Select City'">{{line.ShippingAddress.City}} <i class="fa fa-chevron-down"></i></p>
 												</div>
 												<ul class="dropdown-menu" uib-dropdown-menu aria-labelledby="sort-dropdown">
-													<li ng-repeat="city in line.MultipleCities" ng-click="buildOrderRight.SelectedCity(city, line, checkout.lineItemForm[line.ID])"><a href="">{{city}}</a></li>
+													<li ng-repeat="city in line.MultipleCities" ng-click="checkout.SelectedCity(city, line, checkout.lineItemForm[line.ID])"><a href="">{{city}}</a></li>
 												</ul>
 											</div>
 										</div>
@@ -207,7 +207,6 @@
 												</li>
 											</ul>
 										</div>
-										
 										<div ng-if="line.xp.addressType=='InStorePickUp'" class="select-store">
 											 <p>Select Store</p>
 												 <input type="search" ng-model="line.ShippingAddress.CompanyName" autocomplete="off" ng-value="line.xp.addressType=='InStorePickUp' ? line.ShippingAddress.CompanyName : ''" uib-typeahead="st for st in checkout.storeNames | filter:$viewValue" typeahead-on-select="checkout.addStoreAddress($item, line)" />
@@ -727,7 +726,7 @@
 													<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 payment-amt">
 													<label class="radio-inline radio-common">
 														<p>Amount Paid through Cheque</p>
-														<div class="radio"></div>
+														<!-- <div class="radio"></div> -->
 													</label>
 													</div>
 													<input ng-disabled="checkout.PayCashCheque == 'PayCash'" type="number" ng-model="checkout.txtChequeAmt" class="col-xs-6 col-sm-6 col-md-6 col-lg-6"/>
