--- a/src/app/addressBook/less/addressBook.less
+++ b/src/app/addressBook/less/addressBook.less
@@ -378,6 +378,18 @@
 						.rotate(180deg);
 					}
 				}
+				#sort-dropdown + .dropdown-menu {
+					border-bottom: 1px solid @base-bg-purple-light;
+					li {
+						a {
+							padding: 0 10px;
+							line-height: 30px;
+						}
+						&:last-child {
+							border-bottom: none; 
+						}
+					}
+				}
 		}
 	}
 }	
