order history less

--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -81,15 +81,19 @@
 					    border-left: 1px solid #ccc;
     					border-right: none;
 						height:40px;
-						min-width:20%;
+						min-width:14.28% !important;
+						width:14.28% !important;
+						max-width:14.28% !important;
 				}
 				.ui-grid-header-canvas .ui-grid-header-cell-wrapper .ui-grid-header-cell{
-					min-width:20%;
+					
+					width:14.28% !important;
 				}
 				.ui-grid-canvas .ui-grid-row{
 					background-color:@color20;
 				}
 			}
+			
 		}
 	}
 	.no-items{
