--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -1980,7 +1980,9 @@ input.error, .errorCity {
 							margin-bottom:0px !important;
 						}
 					}
-					
+					.error{
+						margin:15px 0 0 0;
+					}
 				}
 				.outgoing-wire{
 					span{
@@ -2138,7 +2140,7 @@ input.error, .errorCity {
 											color:@primary-dark-color;
 											float:right;
 											font-size:12px;
-											padding: 9px 0;
+											padding: 8px 0;
 											.transition-common(all 0.5s ease);
 											.rotate(0deg);
 										}
@@ -2173,6 +2175,9 @@ input.error, .errorCity {
 										.fa-chevron-down{
 											.rotate(180deg);
 										}
+									}
+									p{
+										line-height:25px;
 									}
 								}
 							}
