--- a/src/app/orderHistory/less/orderHistory.less
+++ b/src/app/orderHistory/less/orderHistory.less
@@ -72,6 +72,8 @@
 					.data_cell{
 						text-decoration: underline;
 						text-decoration-color:@primary-dark-color;
+						text-overflow: ellipsis;
+                        overflow: hidden;
 					}
 					&:hover .data_cell{
 						color:@primary-dark-color;
