--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -1848,7 +1848,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .error{
-	/*color:#f32929;*/
+	color:#f32929;
 	margin:2px 0px;
 	font-size:12px;
 	  font-family: "helvetica-regular";
