on hold listing

--- a/src/app/buildOrder/less/buildOrder.less
+++ b/src/app/buildOrder/less/buildOrder.less
@@ -488,6 +488,7 @@ input.error, .errorCity {
 						font-size: 13px;
 						color: #54565d;
 						margin:0px;
+						width:50px;
 					}
 					button.addCart {
 						padding: 10px 45px 6px 45px;
