--- a/src/app/buildOrder/templates/buildOrder.orderHistoryDetails.tpl.html
+++ b/src/app/buildOrder/templates/buildOrder.orderHistoryDetails.tpl.html
@@ -29,9 +29,9 @@
 							{{line[0].ShippingAddress.Street1}}, {{line[0].ShippingAddress.Street2}}, {{line[0].ShippingAddress.City}}, {{line[0].ShippingAddress.State}} {{line[0].ShippingAddress.Country}} {{line[0].ShippingAddress.Zip}}, {{line[0].ShippingAddress.Phone}}
 						</p>
 					</div>
-					<!-- <div class="col-xs-2 delivery-date">
-						<span>{{line[0].xp.deliveryDate | date: MM/dd/yyyy}}</span>
-					</div> -->
+					<div class="col-xs-2 delivery-date">
+				    	<span>Delivery Date: {{line[0].xp.deliveryDate | date: MM/dd/yyyy}}</span>
+				    </div>
 				</div>
 				<div class="row">
 					<div class="col-xs-12">
