--- a/src/app/custInfo/less/custInfo.less
+++ b/src/app/custInfo/less/custInfo.less
@@ -208,7 +208,11 @@ input.error, .errorCity {
 				font-size: 15px;
 			}
 			.cust-del{
-			 width:18%;
+			 width:27%;
+			}
+			.cust-addrs{
+				width:30%;
+				padding:0;
 			}
 			.cust-addr{
 		      margin-top: -22px;
